# ubs-virt

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.en.md  README.md  README_EN.md  build.sh  clang-tidy-multi.sh  ubs-virt.spec
src/ovs/: CMakeLists.txt
src/ovs/ipc/server/: connection.cpp  connection.h  server.cpp  server.h  thread_pool.cpp
src/ovs/services/urma/: urma_service.cpp
ubs-virt-enpu/vcann-rt/: .gitignore  CMakeLists.txt  README.md  build_ut.sh  core_limiter.c  coverage.sh  make_build.sh  make_lib_original.sh  npu_manager.c  vcann-runtime.spec  vruntime.spec
ubs-virt-enpu/vcann-rt/ascend/: kernel.c  task.c
ubs-virt-enpu/vcann-rt/include/: common.h  config.h  core_limiter.h  npu_manager.h  utils.h
ubs-virt-enpu/vcann-rt/scripts/cmake/: gtest.cmake  mockcpp.cmake  securec.cmake
ubs-virt-enpu/vcann-rt/src/: core_limiter.c  log.c  mem_limiter.c  npu_manager.c
ubs-virt-enpu/vcann-rt/src/ascend/: device.c  event.c  graph.c  hook.c  kernel.c  memory.c  task.c
ubs-virt-enpu/vcann-rt/src/include/: common.h  config.h  core_limiter.h  dcmi_wrapper.h  hash_map.h  log.h  mem_limiter.h  npu_manager.h  runtime_hook.h  utils.h
ubs-virt-enpu/vcann-rt/src/incude/: log.h
ubs-virt-enpu/vcann-rt/src/tools/: monitor.c
ubs-virt-enpu/vcann-rt/src/utils/: config.c  dcmi_wrapper.c  hash_map.c  utils.c
ubs-virt-enpu/vcann-rt/test/: CMakeLists.txt
ubs-virt-enpu/vcann-rt/test/res/: test_npu_info.config
ubs-virt-enpu/vcann-rt/test/stub/: acl_stub.c  dcmi_interface_api.h  dcmi_stub.c  rts_event.h  rts_kernel.h  rts_model.h  rts_stars.h  runtime_stub.c  runtime_stub.h
ubs-virt-enpu/vcann-rt/test/testcase/: core_limiter_test.cpp  demo_test.cpp  device_test.cpp  log_test.cpp  mem_limiter_test.cpp  memory_test.cpp  npu_manager_test.cpp  utils_test.cpp
ubs-virt-enpu/vcann-rt/utils/: config.c  utils.c
ubs-virt-ovs/: .clang-tidy  CMakeLists.txt  Copyright  README.en.md  README.md  go.work  run_ut.sh
ubs-virt-ovs/script/: gtest.cmake  mockcpp.cmake
ubs-virt-ovs/sdk/go/client/: ipc.go  model.go  options.go
ubs-virt-ovs/sdk/go/example/: example.go
ubs-virt-ovs/sdk/go/serde/: packer.go
ubs-virt-ovs/sdk/go/urma/: api.go  api_test.go  model.go  ubs_urma.go
ubs-virt-ovs/src/: CMakeLists.txt  main.cpp
ubs-virt-ovs/src/common/: constants.h
ubs-virt-ovs/src/config/: config_common_def.h  config_manager.cpp  config_manager.h  config_module.cpp  config_module.h
ubs-virt-ovs/src/ipc/code/: virt_ipc_code.h
ubs-virt-ovs/src/ipc/core/: macros.h  service_base.cpp  service_base.h
ubs-virt-ovs/src/ipc/protocol/: protocol.h
ubs-virt-ovs/src/ipc/server/: auth_manager.cpp  auth_manager.h  connection.cpp  connection.h  dispatcher.cpp  dispatcher.h  server.cpp  server.h  thread_pool.h
ubs-virt-ovs/src/logger/: logger.cpp  logger.h
ubs-virt-ovs/src/serde/: virt_msg.h  virt_msg_packer.h
ubs-virt-ovs/src/server/: server.h
ubs-virt-ovs/src/service/: service.h
ubs-virt-ovs/src/services/urma/: urma_service.cpp  urma_service.h
ubs-virt-ovs/src/ubse/: client_library.cpp  client_library.h  urma_utility.cpp  urma_utility.h
ubs-virt-ovs/test/: CMakeLists.txt  client_library_test.cpp
ubs-virt-ovs/test/config/: test_config_manager.cpp  test_config_manager.h  test_config_module.cpp  test_config_module.h
ubs-virt-ovs/test/ipc/core/: test_service_base.cpp  test_service_base.h
ubs-virt-ovs/test/ipc/server/: test_auth_manager.cpp  test_auth_manager.h  test_connection.cpp  test_connection.h  test_dispatcher.cpp  test_dispatcher.h  test_server.cpp  test_server.h  test_thread_pool.cpp  test_thread_pool.h
ubs-virt-ovs/test/logger/: test_logger.cpp  test_logger.h
ubs-virt-ovs/test/services/urma/: test_urma_service.cpp  test_urma_service.h
ubs-virt-ovs/test/ubse/: test_client_library.cpp  test_client_library.h  test_urma_utility.cpp  test_urma_utility.h
virt-awaresched/: .clang-format  .gitattributes  CMakeLists.txt  README.md  README_EN.md  build.sh  vas-daemon.service  virt-awaresched.spec
virt-awaresched/cmake/: building.cmake  gtest.cmake  libboundscheck.cmake  mockcpp.cmake  utils.cmake
virt-awaresched/docs/build_install/: BUILD.md  INSTALL.md
virt-awaresched/docs/cli/: cli_docs_reference.md
virt-awaresched/docs/config/: CONFIG.md
virt-awaresched/docs/contributing/: CONTRIBUTING.md
virt-awaresched/docs/design/: ARCHITECTURE.md
virt-awaresched/docs/example/: EXAMPLE.md
virt-awaresched/docs/test/: TEST.md
virt-awaresched/scripts/: download_dep.sh  upload_dep.sh
virt-awaresched/scripts/ut_coverage/: coverage.sh  start_coverage_server.sh
virt-awaresched/src/: CMakeLists.txt
virt-awaresched/src/cli/: CMakeLists.txt
virt-awaresched/src/cli/opt_serialize/: CMakeLists.txt  cmd_serialize.cpp  cmd_serialize.h
virt-awaresched/src/cli/parser/: CMakeLists.txt  args_util.cpp  args_util.h  vas_cli_parse.cpp  vas_cli_parse.h  vas_cli_process_ctl.cpp  vas_cli_process_ctl.h  vas_cli_reg_builder.cpp  vas_cli_reg_builder.h  vas_cli_res_echo.cpp  vas_cli_res_echo.h
virt-awaresched/src/cli/socket/: CMakeLists.txt  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h
virt-awaresched/src/include/: cmd.h  def.h  error.h
virt-awaresched/src/log/: CMakeLists.txt  logger.cpp  logger.h
virt-awaresched/src/util/: CMakeLists.txt  cluster_vm.h  dynamic_bitset.cpp  dynamic_bitset.h  string_util.cpp  string_util.h
virt-awaresched/src/vasctl/: CMakeLists.txt  vasctl_main.cpp
virt-awaresched/src/vasctl/arg_parse/: CMakeLists.txt  vasctl_arg_parse.cpp  (+1 more)
virt-awaresched/src/vasd/: CMakeLists.txt  vas_daemon_main.cpp
virt-awaresched/test/: .lcovrc  CMakeLists.txt  config.h.in  test_main.cpp
virt-awaresched/test/cli/: CMakeLists.txt
virt-awaresched/test/log/: test_logger.cpp  test_logger.h
virt-awaresched/test/util/: test_dynamic_bitset.cpp  test_dynamic_bitset.h  test_string_util.cpp  test_string_util.h
virt-awaresched/test/vasd/: CMakeLists.txt
virt-optimizer/ebpf/: CMakeLists.txt  run_ut.sh
virt-optimizer/ebpf/src/: CMakeLists.txt  default_config.json
virt-optimizer/ebpf/tests/: CMakeLists.txt
(+234 files in other folders)
